Change scene config

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,9 @@ x64/Release/Raytracer.tlog/link.write.2u.tlog
 x64/Release/Raytracer.tlog/Raytracer.lastbuildstate
 x64/Release/Raytracer.vcxproj.FileListAbsolute.txt
 x64/Release/vcpkg.applocal.log
+.vs/VSWorkspaceState.json
+.vs/slnx.sqlite
+.vs/Raytracer/v17/ipch/AutoPCH/b3a74fde907d0d18/OBJECT.ipch
+.vs/Raytracer/FileContentIndex/ca13dde9-7e6c-45fb-9e10-6afe6b2b3b58.vsidx
+.vs/Raytracer/FileContentIndex/9a00c462-1f70-477b-b97e-c7317eb491c6.vsidx
+.vs/Raytracer/FileContentIndex/92d01e83-d287-4b16-9ae7-cc14121cc41c.vsidx
