Encapsulate functions related to rendering into a separate file

--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,4 @@ x64/Release/vcpkg.applocal.log
 .vs/Raytracer/FileContentIndex/ca13dde9-7e6c-45fb-9e10-6afe6b2b3b58.vsidx
 .vs/Raytracer/FileContentIndex/9a00c462-1f70-477b-b97e-c7317eb491c6.vsidx
 .vs/Raytracer/FileContentIndex/92d01e83-d287-4b16-9ae7-cc14121cc41c.vsidx
+.vs/Raytracer/FileContentIndex/5618cdda-a717-4b05-98bf-33ba736e00ae.vsidx
