--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,17 @@ x64/Release/vcpkg.applocal.log
 .vs/Raytracer/FileContentIndex/9a00c462-1f70-477b-b97e-c7317eb491c6.vsidx
 .vs/Raytracer/FileContentIndex/92d01e83-d287-4b16-9ae7-cc14121cc41c.vsidx
 .vs/Raytracer/FileContentIndex/5618cdda-a717-4b05-98bf-33ba736e00ae.vsidx
+.vs/Raytracer/FileContentIndex/00725f12-5c45-47c6-abe3-d7726301f08f.vsidx
+.vs/Raytracer/FileContentIndex/041e641c-3934-440e-a3b6-d8557eeed486.vsidx
+.vs/Raytracer/FileContentIndex/793850ee-8940-4b47-b09a-59917f0484f4.vsidx
+.vs/Raytracer/FileContentIndex/d9532056-8bfe-4ff2-9ed0-e74610647ea6.vsidx
+.vs/Raytracer/v15/.suo
+.vs/Raytracer/v15/Browse.VC.db
+.vs/Raytracer/v15/ipch/AutoPCH/562eb34646cc35ac/MAIN.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/3b650fa14029c97d/EXE_COMMON.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/4846333ca979faf5/VCTMP21144_209743.RAYTRACER.00000000.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/a3347abe947a533a/MATERIAL.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/a48ae97c44d23acd/EXE_COMMON.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/c972e5df03256d18/RAYTRACER.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/cac302c35b412f8d/VCTMP22976_210408.RAYTRACER.00000000.ipch
+.vs/Raytracer/v17/ipch/AutoPCH/e19f2bbb4ea2ecac/EXE_COMMON.ipch
